# GitAPI

./: .all-contributorsrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUMMARY.md  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql-analysis.yml  pypi-upload.yml  pytest.yml
community/: discussions.md  examples.md  issues.md
fundamentals/: bucketapi.md  hubapi.md  labapi.md  utilities.md
guides/: github-accessing-user-data.md  github-using-custom-queries.md  setting-up-your-environment.md
src/: __init__.py  dummy.py  request.py
src/graphql/: gitstats.py
src/pygitapi/: __init__.py  github.py  utils.py
src/pygitapi/github/: __init__.py
src/pygitapi/graphql/: __init__.py  gitapi.py
src/pygitstats/: gitstats.py
src/pygitstats/graphql/: __init__.py  gitstats.py  utils.py
src/tests/: test_graphql.py
tests/: test_github.py
