[metadata]
name = pygitapi
version = 0.0.0
author = Dillon Barnes
author_email = dillonbarnes07@gmail.com
description = "A Python wrapper for the Git API"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dillonb07, utils
status = stable
url = https://github.com/DillonB07/pygitapi
project_urls =
    Documentation = https://github.com/DillonB07/pygitapi
    Source Code = https://github.com/DillonB07/pygitapi
    Bug Tracker = https://github.com/DillonB07/pygitapi/issues
    Discussions = https://github.com/DillonB07/pygitapi/discussions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
