[metadata]
name = pygitapi
version = 1.0.0rc6
author = Dillon Barnes
author_email = dillonbarnes07@gmail.com
description = "A Python wrapper for the GitHub API"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dillonb07, utils
license = LGPLv3
status = alpha
url = https://github.com/DillonB07/GitAPI
project_urls =
    Documentation = https://github.com/DillonB07/GitAPI
    Source Code = https://github.com/DillonB07/GitAPI
    Bug Tracker = https://github.com/DillonB07/GitAPI/issues
    Discussions = https://github.com/DillonB07/GitAPI/discussions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
